--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "bip39": "^3.1.0",
     "bs58": "^6.0.0",
     "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.1",
     "ed25519-hd-key": "^1.3.0",
     "lucide-react": "^0.469.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.1",
+    "stream-browserify": "^3.0.0",
     "tweetnacl": "^1.0.3"
   },
   "devDependencies": {
